--- a/programs/bpf_loader/Cargo.toml
+++ b/programs/bpf_loader/Cargo.toml
@@ -20,6 +20,7 @@ solana-program-runtime = { path = "../../program-runtime", version = "=1.9.12" }
 solana-sdk = { path = "../../sdk", version = "=1.9.12" }
 solana_rbpf = "=0.2.24"
 thiserror = "1.0"
+environmental = { version = "1.1.2", default-features = false}
 
 [dev-dependencies]
 rand = "0.7.3"
