--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,8 @@ members = [
     "version",
     "watchtower",
     "zk-token-sdk",
-    "solana-accountsdb-plugin-postgres"
+    "solana-accountsdb-plugin-postgres",
+    "neon-tracer"
 ]
 
 exclude = [
