--- a/neon-tracer/Cargo.toml
+++ b/neon-tracer/Cargo.toml
@@ -11,6 +11,10 @@ documentation = "https://docs.neon-labs.org/docs/developing/getting_started"
 default-run = "neon-tracer"
 
 [dependencies]
+openssl = { version = "0.10" }
+postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
+postgres-types = { version = "0.2.2", features = ["derive"] }
+postgres-openssl = { version = "0.5.0"}
 solana-runtime = { path = "../runtime", version = "=1.11.3", features = ["tracer"] }
 
 [target."cfg(unix)".dependencies]
