--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -61,6 +61,10 @@ tar = "0.4.38"
 tempfile = "3.3.0"
 thiserror = "1.0"
 zstd = "0.11.2"
+openssl = { version = "0.10" }
+postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
+postgres-types = { version = "0.2.2", features = ["derive"] }
+postgres-openssl = { version = "0.5.0"}
 
 [lib]
 crate-type = ["lib"]
