improve bank creation method

--- a/neon-tracer/Cargo.toml
+++ b/neon-tracer/Cargo.toml
@@ -12,6 +12,7 @@ default-run = "neon-tracer"
 
 [dependencies]
 solana-runtime = { path = "../runtime", version = "=1.11.3", features = ["tracer"] }
+solana-sdk = { path = "../sdk", version = "=1.11.3" }
 
 [target."cfg(unix)".dependencies]
 libc = "0.2.126"
