--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -65,6 +65,7 @@ openssl = { version = "0.10" }
 postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
 postgres-types = { version = "0.2.2", features = ["derive"] }
 postgres-openssl = { version = "0.5.0"}
+neon-dumper-plugin = { path = "../neon-dumper-plugin", version = "=1.11.3" }
 
 [lib]
 crate-type = ["lib"]
