--- a/neon-tracer/Cargo.toml
+++ b/neon-tracer/Cargo.toml
@@ -14,6 +14,7 @@ default-run = "neon-tracer"
 solana-logger = { path = "../logger", version = "=1.11.3" }
 solana-runtime = { path = "../runtime", version = "=1.11.3", features = ["tracer"] }
 solana-sdk = { path = "../sdk", version = "=1.11.3" }
+solana-ledger = { path = "../ledger", version = "=1.11.3" }
 hex = "*"
 log = "0.4.17"
 
