--- a/neon-tracer/Cargo.toml
+++ b/neon-tracer/Cargo.toml
@@ -17,6 +17,7 @@ solana-sdk = { path = "../sdk", version = "=1.11.3" }
 solana-ledger = { path = "../ledger", version = "=1.11.3" }
 hex = "*"
 log = "0.4.17"
+thiserror = "1.0"
 
 [target."cfg(unix)".dependencies]
 libc = "0.2.126"
