--- a/neon-tracer/Cargo.toml
+++ b/neon-tracer/Cargo.toml
@@ -11,6 +11,7 @@ documentation = "https://docs.neon-labs.org/docs/developing/getting_started"
 default-run = "neon-tracer"
 
 [dependencies]
+clap = "2.33.3"
 solana-logger = { path = "../logger", version = "=1.11.3" }
 solana-runtime = { path = "../runtime", version = "=1.11.3", features = ["tracer"] }
 solana-sdk = { path = "../sdk", version = "=1.11.3" }
