--- a/accountsdb-plugin-config.json
+++ b/accountsdb-plugin-config.json
@@ -6,5 +6,16 @@
     "panic_on_db_errors": true,
     "transaction_selector" : {
         "mentions" : ["53DfF883gyixYNXnM7s5xhdeyV8mVk9T4i2hGV9vG9io"]
+    },
+    "accounts_selector" : {
+        "accounts" : [
+            "SysvarC1ock11111111111111111111111111111111",
+            "SysvarEpochSchedu1e111111111111111111111111",
+            "SysvarFees111111111111111111111111111111111",
+            "SysvarRent111111111111111111111111111111111",
+            "SysvarS1otHashes111111111111111111111111111",
+            "SysvarRecentB1ockHashes11111111111111111111",
+            "SysvarStakeHistory1111111111111111111111111"
+        ]
     }
 }
