--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ members = [
     "version",
     "watchtower",
     "zk-token-sdk",
-    #"neon-tracer",
+    "neon-tracer",
     "neon-dumper-plugin"
 ]
 
