--- a/programs/bpf_loader/Cargo.toml
+++ b/programs/bpf_loader/Cargo.toml
@@ -22,6 +22,7 @@ solana-zk-token-sdk = { path = "../../zk-token-sdk", version = "=1.15.0" }
 solana_rbpf = "=0.2.32"
 thiserror = "1.0"
 num-bigint = "0.4.3"
+num-traits = "0.2"
 
 [dev-dependencies]
 rand = "0.7.3"
