--- a/programs/bpf/Cargo.toml
+++ b/programs/bpf/Cargo.toml
@@ -51,6 +51,7 @@ members = [
     "rust/128bit",
     "rust/128bit_dep",
     "rust/alloc",
+    "rust/big_mod_exp",
     "rust/call_depth",
     "rust/caller_access",
     "rust/curve25519",
