--- a/accountsdb-plugin-config.json
+++ b/accountsdb-plugin-config.json
@@ -3,7 +3,7 @@
     "connection_str": "host=postgres port=5432 dbname=solana user=solana-user password=solana-pass",
     "threads": 20,
     "batch_size": 20,
-    "panic_on_db_errors": true,
+    "panic_on_db_errors": false,
     "transaction_selector" : {
         "mentions" : ["53DfF883gyixYNXnM7s5xhdeyV8mVk9T4i2hGV9vG9io"]
     },
