--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -37,6 +37,7 @@ full = [
 ]
 
 [dependencies]
+array-bytes = "2.0.1"
 assert_matches = { version = "1.5.0", optional = true }
 base64 = "0.13"
 bincode = "1.3.3"
@@ -90,6 +91,8 @@ curve25519-dalek = "3.2.1"
 hex = "0.4.3"
 static_assertions = "1.1.0"
 tiny-bip39 = "0.8.2"
+criterion = "0.3"
+
 
 [build-dependencies]
 rustc_version = "0.4"
@@ -99,3 +102,8 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
+
+
+[[bench]]
+name = "bench_big_mod_exp"
+harness = false
