Partition account_audit table

--- a/neon-dumper-plugin/db/postgresql.conf
+++ b/neon-dumper-plugin/db/postgresql.conf
@@ -800,3 +800,7 @@ include_dir = 'conf.d'			# include files ending in '.conf' from
 #------------------------------------------------------------------------------
 
 # Add settings for extensions here
+
+# Add pg_cron extension
+shared_preload_libraries = 'pg_cron'
+cron.database_name = 'solana'
